--- a/LCDRace1/.project
+++ b/LCDRace1/.project
@@ -37,6 +37,11 @@
 			<locationURI>ArduinoPivateLibPath/Streaming</locationURI>
 		</link>
 		<link>
+			<name>Libraries/TimerOne</name>
+			<type>2</type>
+			<locationURI>ArduinoPivateLibPath/TimerOne</locationURI>
+		</link>
+		<link>
 			<name>Libraries/Wire</name>
 			<type>2</type>
 			<locationURI>ArduinoHardwareLibPath/Wire</locationURI>
