- addition of MemoryFree library for monitoring RAM usage - refactoring of/to some enums and structs - new, wider player marker

--- a/LCDRace1/.project
+++ b/LCDRace1/.project
@@ -32,6 +32,11 @@
 			<locationURI>ArduinoPivateLibPath/LiquidCrystal</locationURI>
 		</link>
 		<link>
+			<name>Libraries/MemoryFree</name>
+			<type>2</type>
+			<locationURI>ArduinoPivateLibPath/MemoryFree</locationURI>
+		</link>
+		<link>
 			<name>Libraries/Streaming</name>
 			<type>2</type>
 			<locationURI>ArduinoPivateLibPath/Streaming</locationURI>
